# cleancodequake2

./: .gitignore  CMakeLists.txt  CleanCode.md  Credits.md  Downloads.md  FrequentlyAskedQuestions.md  GCC_warnings.txt  Makefile  Makefile.txt  NodeNavigationCommands.md  Options.md  ProjectHome.md  Todo.md  todo.txt  version.ver
Visual Studio Macros/: CCMacros.vsmacros  CleanCodeMacros.vsmacros
game/: cc_arg.cpp  cc_armor.cpp  cc_ban.cpp  cc_ban.h  cc_barracuda.cpp  cc_barracuda.h  cc_baseentity.cpp  cc_baseentity.h  cc_berserk.cpp  cc_bfg.cpp  cc_bfg.h  cc_bitch.cpp  cc_bitch.h  cc_blaster.cpp  cc_blaster.h  cc_bodyqueue.cpp  cc_boss2.cpp  cc_chaingun.cpp  cc_chaingun.h  cc_cmds.cpp  cc_cmds.h  cc_colors.cpp  cc_colors.h  cc_conchars.h  cc_controls.cpp  cc_ctf.cpp  cc_ctf.h  cc_ctfadmin.cpp  cc_ctfitems.cpp  cc_ctfmenu.cpp  cc_cvar.cpp  cc_dmflags.h  cc_ent.cpp  cc_entitylist.h  cc_entitytypes.cpp  cc_entitytypes.h  cc_filesystem.cpp  cc_filesystem_local.h  cc_floater.cpp  cc_floater.h  (+132 more)
include/: Local.h  Options.h
lib/: sircl.lib  zlibd.lib  zlibr.lib
minizip/: mztools.c  zip.c
shared/: ColorVec.cpp  ColorVec.h  Exceptions.h  MathLib.cpp  MathLib.h  Path.h  Platform.h  Random.cpp  Shared.h  String.cpp  String.h  Vector.h  byteswap.cpp  infostrings.cpp  m_angles.cpp  m_bounds.cpp  m_mat3.cpp  m_mat4.cpp  m_plane.cpp  m_quat.cpp  mathlib.cpp  mersennetwister.cpp  shared.cpp  shared.h  shared.vcproj  string.cpp
sircl/: LEEME  README  ReadMe.txt  sircl.def  sircl.vcxproj
source/: cc_arg.cpp  cc_arg.h  cc_armor.cpp  cc_armor.h  cc_ban.cpp  cc_ban.h  cc_barracuda.cpp  cc_barracuda.h  cc_base_entity.cpp  cc_base_entity.h  cc_baseentity.cpp  cc_baseentity.h  cc_berserk.cpp  cc_berserk.h  cc_bfg.cpp  cc_bfg.h  cc_bitch.cpp  cc_bitch.h  cc_blaster.cpp  cc_blaster.h  cc_body_queue.cpp  cc_body_queue.h  cc_bodyqueue.cpp  cc_boss2.cpp  cc_boss2.h  cc_brain.cpp  cc_brain.h  cc_brush_models.cpp  cc_brush_models.h  cc_brushmodels.cpp  cc_brushmodels.h  cc_chaingun.cpp  cc_chaingun.h  (+309 more)
(+1318 files in other folders)
